manifests/platform/cert_manager/network-policy/egress-to-host.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-to-host-access
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - host
