manifests/platform/cert_manager/network-policy/egress-to-kube-apiserver.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-to-kube-apiserver-access
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
    # Kubernetes API access
    - toEntities:
        - kube-apiserver
